Temporary fix for draftjs bug where handleDrop breaks onChange

--- a/assets/app.css
+++ b/assets/app.css
@@ -709,10 +709,11 @@
           box-shadow: 0 0 0 2px #b2dbfb;
   border-radius: 3px; }
 
+.liveblog-draggable-block.is-focused > * {
+  border-radius: 3px; }
+
 .liveblog-draggable-block:hover {
   cursor: move; }
 
 .liveblog-draggable-block img {
   display: block; }
-
-/*# sourceMappingURL=app.css.map*/
