--- a/src/styles/core/editor/_block.scss
+++ b/src/styles/core/editor/_block.scss
@@ -3,6 +3,10 @@
   border-radius: $base-border-radius;
 }
 
+.liveblog-draggable-block.is-focused > * {
+  border-radius: $base-border-radius;
+}
+
 .liveblog-draggable-block:hover {
   cursor: move;
 }
